--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"pocketbase:install": "powershell -ExecutionPolicy Bypass -File scripts/download-pocketbase.ps1",
+		"pocketbase:update": "powershell -ExecutionPolicy Bypass -File scripts/download-pocketbase.ps1 -OverwriteExisting",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
