--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"build:release": "vite build --mode production && npm run pocketbase:install -- -Platform linux",
 		"pocketbase:install": "powershell -ExecutionPolicy Bypass -File scripts/download-pocketbase.ps1",
 		"pocketbase:update": "powershell -ExecutionPolicy Bypass -File scripts/download-pocketbase.ps1 -OverwriteExisting",
 		"preview": "vite preview",
