configure svelte build folder

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"build:release": "vite build --mode production && npm run pocketbase:install -- -Platform linux",
-		"pocketbase:install": "powershell -ExecutionPolicy Bypass -File scripts/pocketbase-download.ps1 -Platform windows",
-		"pocketbase:update": "powershell -ExecutionPolicy Bypass -File scripts/pocketbase-download.ps1 -OverwriteExisting -Platform windows",
-		"pocketbase:start": "powershell -ExecutionPolicy Bypass -File scripts/pocketbase-start.ps1 -Platform windows",
+		"build:release": "npm run build -- --mode production && npm run pocketbase:install -- -Platform linux",
+		"pocketbase:install": "powershell -ExecutionPolicy Bypass -File scripts/pocketbase-download.ps1",
+		"pocketbase:update": "powershell -ExecutionPolicy Bypass -File scripts/pocketbase-download.ps1 -OverwriteExisting",
+		"pocketbase:start": "powershell -ExecutionPolicy Bypass -File scripts/pocketbase-start.ps1",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
