--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"build:release": "npm run build -- --mode production && npm run pocketbase:install -- -Platform linux",
-		"pocketbase:install": "powershell -ExecutionPolicy Bypass -File scripts/pocketbase-download.ps1",
-		"pocketbase:update": "powershell -ExecutionPolicy Bypass -File scripts/pocketbase-download.ps1 -OverwriteExisting",
+		"pocketbase:install": "powershell -ExecutionPolicy Bypass -File scripts/pocketbase-download.ps1 -- -Version latest",
+		"pocketbase:update": "npm run pocketbase:install -- -OverwriteExisting",
 		"pocketbase:start": "powershell -ExecutionPolicy Bypass -File scripts/pocketbase-start.ps1",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
