--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-POCKETBASE_ADMIN_EMAIL=email@example.com
-POCKETBASE_ADMIN_PASSWORD=example-password
-PUBLIC_POCKETBASE_BASE_URL=http://localhost:8090
+PUBLIC_BASE_URL=http://localhost:8090
+PUBLIC_POCKETBASE_DASHBOARD_URL=http://localhost:8090/_
+PUBLIC_POCKETBASE_API_URL=http://localhost:8090/api
